--- a/app/src/main/res/layout/fg_movie.xml
+++ b/app/src/main/res/layout/fg_movie.xml
@@ -3,10 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/srl_movie">
+
     <TextView
+        android:id="@+id/tv_movie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="30dp"
         android:text="fragment_movie"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
