--- a/app/src/main/res/layout/fg_video.xml
+++ b/app/src/main/res/layout/fg_video.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="30dp"
         android:text="fragment_video"/>
 
 </LinearLayout>
